--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 Repository for my Ludum Dare 20 entry.
 Let's see if I get done anything at all.
+
+By the way, I'm streaming this @ http://www.ustream.tv/channel/Karethoth
